--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -17,13 +17,17 @@ html[data-font-size="medium"] {
 html[data-font-size="large"] {
   font-size: 21px;
 }
+html[data-font-size="xlarge"] {
+  font-size: 25px;
+}
 
 /* md以上（768px〜）では通常サイズに戻す */
 @media (min-width: 768px) {
   html,
   html[data-font-size="small"],
   html[data-font-size="medium"],
-  html[data-font-size="large"] {
+  html[data-font-size="large"],
+  html[data-font-size="xlarge"] {
     font-size: 16px;
   }
 }
